--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "pdf-controller"
+name = "pdf-editor"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Ryota Jin"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
